--- a/Chapter_3_Digit_Identification.ipynb
+++ b/Chapter_3_Digit_Identification.ipynb
@@ -5,8 +5,10 @@
     "colab": {
       "name": "Chapter 3 - Digit Identification",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM8RFifhe6KcDKg4BDa8dYT",
+      "collapsed_sections": [
+        "hRn8P0nbOvoP"
+      ],
+      "authorship_tag": "ABX9TyN9CLdhtkwEDuaY6U1JgTdt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1734,6 +1736,33 @@
       "metadata": {
         "id": "nSkSXmRyMFrm"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tns^2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PUQAsMK9RXz3",
+        "outputId": "ec1b0327-64fd-4fa0-8b08-6c2fd7d92b25"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[3, 0, 1],\n",
+              "        [6, 7, 4]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
     }
   ]
 }
